horizontal scroll fix

--- a/src/css/all.sass
+++ b/src/css/all.sass
@@ -56,6 +56,8 @@ body
   font: 18px sofia, sans-serif
   background-color: black
   color: white
+  width: 100vw
+  overflow-x: hidden
 
 a
   color: white
